chore: update swagger tags to Public
