# docs/swagger.json
@@ -10,7 +10,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "categories"
+                    "Public"
                 ],
                 "summary": "Lists the categories",
                 "responses": {
@@ -32,13 +32,41 @@
                 }
             }
         },
+        "/public/hero-sliders": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Public"
+                ],
+                "summary": "Lists the hero sliders",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/internal_api.ListHeroSlidersRow"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_api.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
         "/public/products": {
             "get": {
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "products"
+                    "Public"
                 ],
                 "summary": "Lists the products",
                 "parameters": [
@@ -85,7 +113,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "products"
+                    "Public"
                 ],
                 "summary": "Fetches a product info",
                 "parameters": [
@@ -189,6 +217,17 @@
                     "type": "string"
                 },
                 "nameFa": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_api.ListHeroSlidersRow": {
+            "type": "object",
+            "properties": {
+                "image": {
+                    "type": "string"
+                },
+                "url": {
                     "type": "string"
                 }
             }
